typo from source yaml
Signed-off-by: rawkintrevo <trevor.d.grant@gmail.com>

--- a/.github/workflows/notebook-testing.yaml
+++ b/.github/workflows/notebook-testing.yaml
@@ -3,7 +3,7 @@ name: CI for Jupyter Notebooks
 on:
   push:
     branches:
-      - pm-41
+      - main
   pull_request:
     branches:
       - main
