--- a/.github/workflows/notebook-testing.yaml
+++ b/.github/workflows/notebook-testing.yaml
@@ -26,6 +26,10 @@ jobs:
           python -m pip install --upgrade pip  
           pip install nbconvert nbclient ipykernel
 
+      - name: Install Project Package
+        run: |
+          pip install -e .  
+
       - name: Run Jupyter Notebooks
         env:
           REPLICATE_API_TOKEN: ${{ secrets.REPLICATE_API_TOKEN }}
