--- a/.github/workflows/unit-testing.yaml
+++ b/.github/workflows/unit-testing.yaml
@@ -1,42 +1,101 @@
-name: CI for Jupyter Notebooks
+# SPDX-License-Identifier: Apache-2.0
+
+name: Unit Tests
 
 on:
   push:
     branches:
       - main
+    paths:
+      - '**/*.py'
+      - 'pyproject.toml'
+      - 'tox.ini'
+      - '.github/workflows/unit-testing.yml' # This workflow
   pull_request:
     branches:
       - main
+    paths:
+      - '**/*.py'
+      - 'pyproject.toml'
+      - 'tox.ini'
+      - '.github/workflows/unit-testing.yml' # This workflow
+
+env:
+  LC_ALL: en_US.UTF-8
+
+defaults:
+  run:
+    shell: bash
+
+permissions:
+  contents: read
 
 jobs:
-  test-notebooks:
-    runs-on: ubuntu-latest
-
+  unit-test:
+    runs-on: "${{ matrix.platform }}"
+    strategy:
+      matrix:
+        python:
+          - '3.10'
+          - '3.11'
+        platform:
+          - 'ubuntu-latest'
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: Set up Python ${{ matrix.python }}
         uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: "${{ matrix.python }}"
 
-      - name: Install dependencies
+      - name: Install tox
         run: |
-          python -m pip install --upgrade pip  
-          pip install nbconvert nbclient ipykernel pytest
+          python -m pip install --upgrade pip
+          python -m pip install tox tox-gh
 
-      - name: Install Project Package
+      - name: Unit tests
         run: |
-          pip install -e .  
+          tox
 
-      - name: Set Python Path
+  lint:
+    name: "${{ matrix.lint.name }}"
+    runs-on: "${{ matrix.platform }}"
+    strategy:
+      fail-fast: false
+      matrix:
+        python:
+          - '3.11'
+        platform:
+          - 'ubuntu-latest'
+        lint:
+          - name: 'ruff'
+            commands: |
+              tox -e ruffcheck
+          - name: 'pylint'
+            commands: |
+              echo "::add-matcher::.github/workflows/matchers/pylint.json"
+              tox -e pylint
+          - name: 'mypy'
+            commands: |
+              echo "::add-matcher::.github/workflows/matchers/mypy.json"
+              tox -e mypy
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python ${{ matrix.python }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: "${{ matrix.python }}"
+
+      - name: Install tox
         run: |
-          echo "PYTHONPATH=$GITHUB_WORKSPACE" >> $GITHUB_ENV
+          python -m pip install --upgrade pip
+          python -m pip install tox tox-gh
 
-      - name: Run Tests
+      - name: "${{ matrix.lint.name }}"
+        run: |
+          ${{ matrix.lint.commands }}
         env:
-          REPLICATE_API_TOKEN: ${{ secrets.REPLICATE_API_TOKEN }}
-        run: |
-          echo "PYTHONPATH=$PYTHONPATH"
-          pytest
+          RUFF_OUTPUT_FORMAT: github
