ci: Enable explicit secret passing
When using this file (from its main repo), a recipe repo fork cannot
use secrets: inherit to pass secrets across the organization boundary.

So we need to allow for explicit secret passing, where the forks secret
values can be passed to this called workflow.

Signed-off-by: BJ Hargrave <hargrave@us.ibm.com>

--- a/.github/workflows/test_notebook.yaml
+++ b/.github/workflows/test_notebook.yaml
@@ -56,6 +56,15 @@ on:
         required: false
         type: string
         default: ''
+    secrets:
+      REPLICATE_API_TOKEN:
+        required: false
+      WATSONX_APIKEY:
+        required: false
+      WATSONX_PROJECT_ID:
+        required: false
+      WATSONX_URL:
+        required: false
 
 env:
   LC_ALL: en_US.UTF-8
