--- a/.github/workflows/test_notebook.yaml
+++ b/.github/workflows/test_notebook.yaml
@@ -65,6 +65,8 @@ on:
         required: false
       WATSONX_URL:
         required: false
+      NVIDIA_API_KEY:
+        required: false
 
 env:
   LC_ALL: en_US.UTF-8
@@ -169,3 +171,4 @@ jobs:
           WATSONX_APIKEY: ${{ secrets.WATSONX_APIKEY }}
           WATSONX_PROJECT_ID: ${{ secrets.WATSONX_PROJECT_ID }}
           WATSONX_URL: ${{ secrets.WATSONX_URL }}
+          NVIDIA_API_KEY: ${{ secrets.NVIDIA_API_KEY }}
