testing: Display notebook testing output
We write the output of executing the notebook to stdout in markdown
format. This will provide more information in case of testing failure.

Signed-off-by: BJ Hargrave <hargrave@us.ibm.com>

--- a/.github/workflows/test_notebook.yaml
+++ b/.github/workflows/test_notebook.yaml
@@ -40,7 +40,7 @@ on:
         required: false
         type: string
         default: |
-          jupyter nbconvert --to notebook --execute --inplace "$NOTEBOOK"
+          jupyter nbconvert --to markdown --execute --stdout "$NOTEBOOK"
       ref:
         description: 'Git ref to checkout'
         required: false
