--- a/.github/workflows/test_notebook.yaml
+++ b/.github/workflows/test_notebook.yaml
@@ -96,7 +96,11 @@ jobs:
       - name: "Harden Runner"
         uses: step-security/harden-runner@0634a2670c59f64b4a01f0f96f84700a4088b9f0 # v2.12.0
         with:
-          egress-policy: audit # TODO: change to 'egress-policy: block' after couple of runs
+          disable-sudo-and-containers: true
+          egress-policy: block
+          allowed-endpoints: >
+            api.github.com:443
+            github.com:443
 
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -170,24 +174,19 @@ jobs:
         if: ${{ hashFiles('.github/tmp/actions/test-setup/action.yml','.github/tmp/actions/test-setup/action.yaml') }}
         uses: ./.github/tmp/actions/test-setup
 
-      - name: Setup Python ${{ matrix.python }}
-        uses: actions/setup-python@8d9ed9ac5c53483de85588cdf95a591a75ab9f55 # v5.5.0
+      - name: 'Setup uv with Python ${{ matrix.python }}'
+        uses: astral-sh/setup-uv@d4b2f3b6ecc6e67c4457f6d3e41ec42d3d0fcb86 # v5.4.2
         with:
           python-version: ${{ matrix.python }}
-
-      - name: Install dependencies
-        run: |
-          python -m venv --upgrade-deps .venv
-          source .venv/bin/activate
-          python -m pip install --require-virtualenv --requirement <(echo "$PIP_INSTALL" | xargs -n1)
-        env:
-          PIP_INSTALL: ${{ inputs.pip-install }}
+          enable-cache: false
 
       - name: Test ${{ matrix.notebook }}
         run: |
-          source .venv/bin/activate
-          ${{ inputs.command }}
+          uv pip compile --output-file "$REQUIREMENTS_TXT" <(echo "$PIP_INSTALL" | xargs -n1)
+          uv run --with-requirements "$REQUIREMENTS_TXT" -- ${{ inputs.command }}
         env:
+          PIP_INSTALL: ${{ format('pip setuptools {0}', inputs.pip-install) }}
+          REQUIREMENTS_TXT: ${{ format('{0}/requirements.txt', runner.temp) }}
           NOTEBOOK: ${{ matrix.notebook }}
           GRANITE_TESTING: ${{ vars.GRANITE_TESTING }}
           REPLICATE_API_TOKEN: ${{ secrets.REPLICATE_API_TOKEN }}
