--- a/.github/workflows/test_notebook.yaml
+++ b/.github/workflows/test_notebook.yaml
@@ -174,21 +174,46 @@ jobs:
         if: ${{ hashFiles('.github/tmp/actions/test-setup/action.yml','.github/tmp/actions/test-setup/action.yaml') }}
         uses: ./.github/tmp/actions/test-setup
 
-      - name: 'Setup uv with Python ${{ matrix.python }}'
-        uses: astral-sh/setup-uv@c7f87aa956e4c323abf06d5dec078e358f6b4d04 # v6.0.0
+      - name: 'Setup Python ${{ matrix.python }}'
+        id: python
+        uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
         with:
           python-version: ${{ matrix.python }}
+
+      - name: 'Environment variables'
+        run: |
+          echo "REQUIREMENTS_TXT=$REQUIREMENTS_TXT" >> "$GITHUB_ENV"
+          echo "UV_CONSTRAINT=$CONSTRAINTS_TXT" >> "$GITHUB_ENV"
+          echo "PIP_CONSTRAINT=$CONSTRAINTS_TXT" >> "$GITHUB_ENV"
+        env:
+          REQUIREMENTS_TXT: ${{ format('{0}/requirements.txt', runner.temp) }}
+          CONSTRAINTS_TXT: ${{ hashFiles('constraints.txt') && format('{0}/constraints.txt', github.workspace) || '' }}
+
+      - name: 'Setup uv'
+        uses: astral-sh/setup-uv@c7f87aa956e4c323abf06d5dec078e358f6b4d04 # v6.0.0
+        with:
+          python-version: ${{ steps.python.outputs.python-version }}
           enable-cache: false
+
+      - name: 'Compile requirements'
+        run: |
+          uv pip compile --no-header --output-file "$REQUIREMENTS_TXT" <(echo "$PIP_INSTALL" | xargs -n1)
+        env:
+          PIP_INSTALL: ${{ format('pip setuptools {0}', inputs.pip-install) }}
+
+      - name: 'Cache'
+        uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
+        with:
+          path: |
+            ~/.cache/huggingface
+            ${{ env.UV_CACHE_DIR }}
+          key: ${{ runner.os }}-${{ runner.arch }}-${{ steps.python.outputs.python-version }}-${{ hashFiles(matrix.notebook, env.REQUIREMENTS_TXT) }}
 
       - name: Test ${{ matrix.notebook }}
         run: |
-          uv pip compile --output-file "$REQUIREMENTS_TXT" <(echo "$PIP_INSTALL" | xargs -n1)
           uv run --no-project --with-requirements "$REQUIREMENTS_TXT" -- ${{ inputs.command }}
+          uv cache prune --ci
         env:
-          PIP_INSTALL: ${{ format('pip setuptools {0}', inputs.pip-install) }}
-          REQUIREMENTS_TXT: ${{ format('{0}/requirements.txt', runner.temp) }}
-          UV_CONSTRAINT: ${{ hashFiles('constraints.txt') && format('{0}/constraints.txt', github.workspace) || '' }}
-          PIP_CONSTRAINT: ${{ hashFiles('constraints.txt') && format('{0}/constraints.txt', github.workspace) || '' }}
           NOTEBOOK: ${{ matrix.notebook }}
           GRANITE_TESTING: ${{ vars.GRANITE_TESTING }}
           REPLICATE_API_TOKEN: ${{ secrets.REPLICATE_API_TOKEN }}
