--- a/.github/workflows/test_notebook.yaml
+++ b/.github/workflows/test_notebook.yaml
@@ -180,17 +180,8 @@ jobs:
         with:
           python-version: ${{ matrix.python }}
 
-      - name: 'Environment variables'
-        run: |
-          echo "REQUIREMENTS_TXT=$REQUIREMENTS_TXT" >> "$GITHUB_ENV"
-          echo "UV_CONSTRAINT=$CONSTRAINTS_TXT" >> "$GITHUB_ENV"
-          echo "PIP_CONSTRAINT=$CONSTRAINTS_TXT" >> "$GITHUB_ENV"
-        env:
-          REQUIREMENTS_TXT: ${{ format('{0}/requirements.txt', runner.temp) }}
-          CONSTRAINTS_TXT: ${{ hashFiles('constraints.txt') && format('{0}/constraints.txt', github.workspace) || '' }}
-
       - name: 'Setup uv'
-        uses: astral-sh/setup-uv@c7f87aa956e4c323abf06d5dec078e358f6b4d04 # v6.0.0
+        uses: astral-sh/setup-uv@6b9c6063abd6010835644d4c2e1bef4cf5cd0fca # v6.0.1
         with:
           python-version: ${{ steps.python.outputs.python-version }}
           enable-cache: false
@@ -198,8 +189,13 @@ jobs:
       - name: 'Compile requirements'
         run: |
           uv pip compile --no-header --output-file "$REQUIREMENTS_TXT" <(echo "$PIP_INSTALL" | xargs -n1)
+          echo "REQUIREMENTS_TXT=$REQUIREMENTS_TXT" >> "$GITHUB_ENV"
+          echo "UV_CONSTRAINT=$UV_CONSTRAINT" >> "$GITHUB_ENV"
+          echo "PIP_CONSTRAINT=$UV_CONSTRAINT" >> "$GITHUB_ENV"
         env:
           PIP_INSTALL: ${{ format('pip setuptools {0}', inputs.pip-install) }}
+          REQUIREMENTS_TXT: ${{ format('{0}/requirements.txt', runner.temp) }}
+          UV_CONSTRAINT: ${{ hashFiles('constraints.txt') && format('{0}/constraints.txt', github.workspace) || '' }}
 
       - name: 'Cache'
         uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
