--- a/.github/workflows/unit-testing.yaml
+++ b/.github/workflows/unit-testing.yaml
@@ -38,6 +38,7 @@ jobs:
         python:
           - '3.10'
           - '3.11'
+          - '3.12'
         platform:
           - 'ubuntu-latest'
     steps:
@@ -49,10 +50,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
-      - name: 'Setup uv with Python ${{ matrix.python }}'
-        uses: astral-sh/setup-uv@c7f87aa956e4c323abf06d5dec078e358f6b4d04 # v6.0.0
+      - name: 'Setup Python ${{ matrix.python }}'
+        id: python
+        uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
         with:
           python-version: ${{ matrix.python }}
+
+      - name: 'Setup uv'
+        uses: astral-sh/setup-uv@6b9c6063abd6010835644d4c2e1bef4cf5cd0fca # v6.0.1
+        with:
+          python-version: ${{ steps.python.outputs.python-version }}
           enable-cache: false
 
       - name: Unit tests
@@ -90,10 +97,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
-      - name: 'Setup uv with Python ${{ matrix.python }}'
-        uses: astral-sh/setup-uv@c7f87aa956e4c323abf06d5dec078e358f6b4d04 # v6.0.0
+      - name: 'Setup Python ${{ matrix.python }}'
+        id: python
+        uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
         with:
           python-version: ${{ matrix.python }}
+
+      - name: 'Setup uv'
+        uses: astral-sh/setup-uv@6b9c6063abd6010835644d4c2e1bef4cf5cd0fca # v6.0.1
+        with:
+          python-version: ${{ steps.python.outputs.python-version }}
           enable-cache: false
 
       - name: "${{ matrix.lint.name }}"
