Add workflow to lint workflows
Signed-off-by: BJ Hargrave <hargrave@us.ibm.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,8 @@ updates:
     - "/"
     schedule:
       interval: "daily"
+  - package-ecosystem: "docker"
+    directories:
+    - "/.github/workflows"
+    schedule:
+      interval: "daily"
