--- a/.github/workflows/test_notebook.yaml
+++ b/.github/workflows/test_notebook.yaml
@@ -202,8 +202,16 @@ jobs:
         with:
           path: |
             ~/.cache/huggingface
+            ~/.cache/pre-commit
             ${{ env.UV_CACHE_DIR }}
-          key: ${{ runner.os }}-${{ runner.arch }}-${{ steps.python.outputs.python-version }}-${{ hashFiles(matrix.notebook, env.REQUIREMENTS_TXT) }}
+          key: ${{ runner.os }}-${{ runner.arch }}-${{ steps.python.outputs.python-version }}-${{ hashFiles(matrix.notebook, env.REQUIREMENTS_TXT, '.pre-commit-config.yaml') }}
+
+      - name: Lint ${{ matrix.notebook }}
+        if: ${{ hashFiles('.pre-commit-config.yaml') }}
+        run: |
+          uvx --with pre-commit-uv -- pre-commit run nbstripout --files "$NOTEBOOK" --show-diff-on-failure --color=always
+        env:
+          NOTEBOOK: ${{ matrix.notebook }}
 
       - name: Test ${{ matrix.notebook }}
         run: |
