Remove python 3.10 from CI testing
We remove 3.10 since some recipe notebooks have dependencies which
require 3.11+.

Signed-off-by: BJ Hargrave <hargrave@us.ibm.com>

--- a/.github/workflows/test_notebook.yaml
+++ b/.github/workflows/test_notebook.yaml
@@ -27,6 +27,7 @@ on:
         type: string
         default: >-
           3.11
+          3.12
       pip-install:
         description: 'Space-separated dependencies to pip install'
         required: false
@@ -35,6 +36,7 @@ on:
           nbconvert
           nbclient
           ipykernel
+          ipywidgets
       command:
         description: 'Newline-separated commands to test notebook'
         required: false
