Add support for HF_TOKEN secret in notebook testing workflow
Signed-off-by: BJ Hargrave <hargrave@us.ibm.com>

--- a/.github/workflows/test_notebook.yaml
+++ b/.github/workflows/test_notebook.yaml
@@ -75,6 +75,8 @@ on:
         required: false
       NVIDIA_API_KEY:
         required: false
+      HF_TOKEN:
+        required: false
 
 env:
   LC_ALL: en_US.UTF-8
@@ -228,3 +230,4 @@ jobs:
           WATSONX_PROJECT_ID: ${{ secrets.WATSONX_PROJECT_ID }}
           WATSONX_URL: ${{ secrets.WATSONX_URL }}
           NVIDIA_API_KEY: ${{ secrets.NVIDIA_API_KEY }}
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
