Use --isolated with uv
This is better than --no-project as it ignores any local venv as well
as project metadata.

Signed-off-by: BJ Hargrave <hargrave@us.ibm.com>

--- a/.github/workflows/test_notebook.yaml
+++ b/.github/workflows/test_notebook.yaml
@@ -220,7 +220,7 @@ jobs:
 
       - name: Test ${{ matrix.notebook }}
         run: |
-          uv run --no-project --with-requirements "$REQUIREMENTS_TXT" -- ${{ inputs.command }}
+          uv run --isolated --with-requirements "$REQUIREMENTS_TXT" -- ${{ inputs.command }}
           uv cache prune --ci
         env:
           NOTEBOOK: ${{ matrix.notebook }}
